ejs-loader was all i needed

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <title>Example template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <img src="logo.png" />
   </body>
 </html>
