--- a/src/html/grid.html
+++ b/src/html/grid.html
@@ -1,16 +1,21 @@
-    <div class="container">
-
-      <h1>Bootstrap grid examples</h1>
-      <p class="lead">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</p>
-
-      <h3>Five grid tiers</h3>
-      <p>There are five tiers to the Bootstrap grid system, one for each range of devices we support. Each tier starts at a minimum viewport size and automatically applies to the larger devices unless overridden.</p>
-
-      <div class="row">
-        <div class="col-4">.col-4</div>
-        <div class="col-2">.col-2</div>
-        <div class="col-4">.col-4</div>
-      </div>
-
-
-    </div> <!-- /container -->
+<div class="container">
+  <h1>Barebones Typescript Webpack</h1>
+  <p class="lead">
+    Minimal fluff just TS, webpack, Bootstrap
+  </p>
+</div>
+  <div class="container">
+      <img src="#.jpg" height="200px" width="300px">
+    <button type="button" class="btn btn-primary">Button 1</button>
+    <button type="button" class="btn btn-secondary">Button 2</button>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 target"></div>
+    </div>
+    <div class="row">
+      <div class="col-6 target"></div>
+      <div class="col-6 target2"></div>
+    </div>
+  </div>
+</div>
