--- a/src/html/grid.html
+++ b/src/html/grid.html
@@ -10,11 +10,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-12 target"></div>
-    </div>
-    <div class="row">
-      <div class="col-6 target"></div>
-      <div class="col-6 target2"></div>
+      <div class="col-12 target pre-scrollable"></div>
     </div>
   </div>
 </div>
