--- a/src/html/grid.html
+++ b/src/html/grid.html
@@ -5,8 +5,8 @@
   </p>
 </div>
   <div class="container">
-    <button type="button" class="btn btn-primary">Button 1</button>
-    <button type="button" class="btn btn-secondary">Button 2</button>
+    <button type="button" class="btn btn-primary" name="button1">Button 1</button>
+    <button type="button" class="btn btn-secondary" name="button2">Button 2</button>
   </div>
   <div class="container">
     <div class="row">
