--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -1,16 +1,19 @@
 <div class="container">
-  <h1>Barebones Typescript Webpack</h1>
+  <h2>Barebones TypeScript webpack Boostrap App</h2>
   <p class="lead">
-    Minimal fluff just TS, webpack, Bootstrap
+    Minimal fluff. Set up for experimenting
   </p>
 </div>
-  <div class="container">
-    <button type="button" class="btn btn-primary" name="button1">Button 1</button>
-    <button type="button" class="btn btn-secondary" name="button2">Button 2</button>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 target pre-scrollable"></div>
-    </div>
+<div class="container">
+  <button type="button" class="btn btn-primary" name="button1">
+    Press this button
+  </button>
+  <button type="button" class="btn btn-secondary" name="button2">
+    Or press this button
+  </button>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12 output-box pre-scrollable"></div>
   </div>
 </div>
