--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -9,10 +9,15 @@
   <button type="button" class="btn btn-primary" name="button1">
     Press this button
   </button>
+</div>
+<div class="container">
   <input type="text" class="form-control" placeholder="collection name" name="colname">
   <button type="button" class="btn btn-secondary" name="button2">
     Or press this button
   </button>
+</div>
+<div class="container">
+
   <input type="text" class="form-control" placeholder="collection name" name="col2name">
   <button type="button" class="btn btn-success" name="button3">
     Or maybe this one
