--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -5,22 +5,42 @@
   </p>
 </div>
 <div class="container">
-    <input type="text" class="form-control" placeholder="database name" name="dbname">
-  <button type="button" class="btn btn-primary" name="button1">
+  <input
+    type="text"
+    class="form-control"
+    placeholder="collection name"
+    name="collection-name"
+  />
+  <button type="button" class="btn btn-primary" name="createCollection">
     Press this button
   </button>
 </div>
 <div class="container">
-  <input type="text" class="form-control" placeholder="collection name" name="colname">
-  <button type="button" class="btn btn-secondary" name="button2">
-    Or press this button
+  <input
+    type="text"
+    class="form-control"
+    placeholder="firstname"
+    name="firstname"
+  />
+  <input
+    type="text"
+    class="form-control"
+    placeholder="lastname"
+    name="lastname"
+  />
+  <input
+    type="text"
+    class="form-control"
+    placeholder="age"
+    name="age"
+  />
+  <button type="button" class="btn btn-secondary" name="addDocument">
+    Add Document
   </button>
 </div>
 <div class="container">
-
-  <input type="text" class="form-control" placeholder="collection name" name="col2name">
-  <button type="button" class="btn btn-success" name="button3">
-    Or maybe this one
+  <button type="button" class="btn btn-success" name="outputCollection">
+    Output Collection Array
   </button>
 </div>
 <div class="container">
