--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -12,7 +12,7 @@
     name="collection-name"
   />
   <button type="button" class="btn btn-primary" name="createCollection">
-    Press this button
+    Create new collection
   </button>
 </div>
 <div class="container">
