--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -8,6 +8,17 @@
   <input
     type="text"
     class="form-control"
+    placeholder="database name"
+    name="database-name"
+  />
+  <button type="button" class="btn btn-primary" name="createDatabase">
+    Create new database
+  </button>
+</div>
+<div class="container">
+  <input
+    type="text"
+    class="form-control"
     placeholder="collection name"
     name="collection-name"
   />
@@ -15,6 +26,7 @@
     Create new collection
   </button>
 </div>
+
 <div class="container">
   <input
     type="text"
