--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -5,58 +5,68 @@
   </p>
 </div>
 <div class="container">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="database name"
-    name="database-name"
-  />
-  <button type="button" class="btn btn-primary" name="createDatabase">
-    Create new database
-  </button>
-</div>
-<div class="container">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="collection name"
-    name="collection-name"
-  />
-  <button type="button" class="btn btn-primary" name="createCollection">
-    Create new collection
-  </button>
-</div>
-
-<div class="container">
-  <input
-    type="text"
-    class="form-control"
-    placeholder="firstname"
-    name="firstname"
-  />
-  <input
-    type="text"
-    class="form-control"
-    placeholder="lastname"
-    name="lastname"
-  />
-  <input
-    type="text"
-    class="form-control"
-    placeholder="age"
-    name="age"
-  />
-  <button type="button" class="btn btn-secondary" name="addDocument">
-    Add Document
-  </button>
-</div>
-<div class="container">
-  <button type="button" class="btn btn-success" name="outputCollection">
-    Output Collection Array
-  </button>
-</div>
-<div class="container">
   <div class="row">
-    <div class="col-12 output-box pre-scrollable"></div>
+    <div class="col-sm">
+      <div class="container">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="database name"
+          name="database-name"
+        />
+        <button type="button" class="btn btn-primary" name="createDatabase">
+          Create new database
+        </button>
+      </div>
+      <div class="container">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="collection name"
+          name="collection-name"
+        />
+        <button type="button" class="btn btn-primary" name="createCollection">
+          Create new collection
+        </button>
+      </div>
+
+      <div class="container">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="firstname"
+          name="firstname"
+        />
+        <input
+          type="text"
+          class="form-control"
+          placeholder="lastname"
+          name="lastname"
+        />
+        <input type="text" class="form-control" placeholder="age" name="age" />
+        <button type="button" class="btn btn-secondary" name="addDocument">
+          Add Document
+        </button>
+      </div>
+      <div class="container">
+        <button type="button" class="btn btn-success" name="outputCollection">
+          Output Collection Array
+        </button>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 output-box pre-scrollable"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 docs-box pre-scrollable"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
