--- a/src/html/barebones.html
+++ b/src/html/barebones.html
@@ -43,7 +43,7 @@
           placeholder="lastname"
           name="lastname"
         />
-        <input type="text" class="form-control" placeholder="age" name="age" />
+        <input type="number" class="form-control" placeholder="age" name="age" />
         <button type="button" class="btn btn-secondary" name="addDocument">
           Add Document
         </button>
